--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,13 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
+
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/c4c11de8ff.js" crossorigin="anonymous"></script>
+
+    <!-- Slick -->
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <!-- -->
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
